--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "GDrive-Uploader-Bot",
   "description": "Telegram/Direct Links to GDrive Uploader Bot",
-  "repository": "https://github.com/viperadnan-git/gdrive-uploader-telegram-bot",
+  "repository": "https://github.com/kirodewal/gdrive-uploader-telegram-bot",
   "logo": "https://telegra.ph/file/8669281aa2360613f7511.jpg",
   "keywords": ["Telegram", "Google Drive", "uploader"],
   "env": {
@@ -13,8 +13,24 @@
     },
     "API_HASH": {
       "description": "Your API_HASH, Get it from https://my.telegram.org/apps"
-    }
+    },
+    "G_DRIVE_CLIENT_SECRET": {
+      "description": "Required for GDrive. Get from https://da.gd/so63O",
+      "value": "",
+      "required": true
+    },
+    "G_DRIVE_CLIENT_ID": {
+      "description": "Get it from https://da.gd/so63O",
+      "value": "",
+      "required": true
+   }
    },
+   "addons": [{
+    "plan": "heroku-postgresql",
+    "options": {
+      "version": "9.6"
+      }
+    }],
    "buildpacks": [
     {
       "url": "heroku/python"
